--- a/audio.html
+++ b/audio.html
@@ -7,11 +7,11 @@
     <title>this is audio </title>
 </head>
 <body>
-    <audio src="/audio/Akhiyaan_Milavanga_-_Commando_3__Vidyut_Jammwal,_Adah_Sharma__Arijit_Singh_&_Sruthy_S__Mannan_S(256k).mp3" controls loop preload="none"></audio>
+    <audio src="/audio/Akhiyaan_Milavanga_-_Commando_3__Vidyut_Jammwal,_Adah_Sharma__Arijit_Singh_&_Sruthy_S__Mannan_S(256k).mp3" controls loop preload="none" autoplay></audio>
     <br><br><br>
-    <audio src="/audio/Kaali_Raat_-_Remix__Karan_Randhawa__DJ_Sumit_Rajwanshi__SR_Music_Official__Latest_Remix_2021(256k).mp3" controls loop></audio>
+    <audio src="/audio/Kaali_Raat_-_Remix__Karan_Randhawa__DJ_Sumit_Rajwanshi__SR_Music_Official__Latest_Remix_2021(256k).mp3" controls loop autoplay></audio>
     <br><br><br>
-    <audio src="/audio/Jai_Kara_Kedara-_Official_4K_Video_-_Hansraj_Raghuwanshi_-_2022_Bholenath_Song_-_Ricky_T_Giftruller(256k).mp3" controls loop preload="none"></audio>
+    <audio src="/audio/Jai_Kara_Kedara-_Official_4K_Video_-_Hansraj_Raghuwanshi_-_2022_Bholenath_Song_-_Ricky_T_Giftruller(256k).mp3" controls autoplay loop preload="none"></audio>
     <br><br><br><br>
     <a href="https://gaana.com/song/tuz-dekhan-rup"><h1>MARATHI SONG</h1></a>
 </body>
