--- a/video.html
+++ b/video.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video height="800px" width="800px" controls poster="/imag/wp7064864.jpg" loop preload="auto"  >
+    <video height="800px" width="800px" controls poster="/imag/wp7064864.jpg" loop autoplay preload="auto"  >
         <source src="/vdo/6b9003628dcc42eeb969edae2962284a.mp4" >
     </video>
 
