--- a/audio.html
+++ b/audio.html
@@ -11,9 +11,14 @@
         <source src="audio/aahista_aahista_hum_tumhare_hue_full_hd_4k_video_song__saaj_bhatt__shoaib_ibrahim__shruti_bakshi(256k).mp3">
     </audio>
     <br><br><br>
-    <audio src="/audio/Kaali_Raat_-_Remix__Karan_Randhawa__DJ_Sumit_Rajwanshi__SR_Music_Official__Latest_Remix_2021(256k).mp3" controls loop autoplay></audio>
+    <audio controls loop>
+        <source src="audio/Jai_Kara_Kedara-_Official_4K_Video_-_Hansraj_Raghuwanshi_-_2022_Bholenath_Song_-_Ricky_T_Giftruller">
+    </audio>
     <br><br><br>
-    <audio src="/audio/Jai_Kara_Kedara-_Official_4K_Video_-_Hansraj_Raghuwanshi_-_2022_Bholenath_Song_-_Ricky_T_Giftruller(256k).mp3" controls autoplay loop ></audio>
+    <audio controls  autoplay loop>
+        <source src="audio/Akhiyaan_Milavanga_-_Commando_3__Vidyut_Jammwal,_Adah_Sharma__Arijit_Singh_&_Sruthy_S__Mannan_S(256k).mp3">
+    </audio>
+     
     <br><br><br><br>
     <a href="https://gaana.com/song/tuz-dekhan-rup"><h1>MARATHI SONG</h1></a>
 </body>
