--- a/audio.html
+++ b/audio.html
@@ -11,7 +11,7 @@
         <source src="audio/aahista_aahista_hum_tumhare_hue_full_hd_4k_video_song__saaj_bhatt__shoaib_ibrahim__shruti_bakshi(256k).mp3">
     </audio>
     <br><br><br>
-    <audio controls  loop>
+    <audio controls>
         <source src="audio/Jai_Kara_Kedara-_Official_4K_Video_-_Hansraj_Raghuwanshi_-_2022_Bholenath_Song_-_Ricky_T_Giftruller">
     </audio>
     <br><br><br>
